# cd13331-multimodal-public

admin/: download_weights.py  fix_datasets_ro.py  propagate_env.sh  setup_lesson.sh
admin/download_weights/: download_weights.py  pyproject.toml  requirements.txt  requirements_slim.txt
l1/: pyproject.toml
l1/demos/1-showcase/: demo.ipynb  fix_nbs.py  pyproject.toml  w.txt
l1/demos/2-pydantic-ai/: demo.ipynb
l1/exercises/1-showcase-exercise/: pyproject.toml  requirements.txt  requirements_slim.txt
l1/exercises/1-showcase-exercise/solution/: exercise.ipynb
l1/exercises/1-showcase-exercise/starter/: exercise.ipynb
l1/exercises/2-pydantic-ai/: requirements.txt  requirements_slim.txt
l1/exercises/2-pydantic-ai/solution/: exercise.ipynb
l1/exercises/2-pydantic-ai/starter/: exercise.ipynb  pyproject.toml
l2/demos/1-vision-preprocessing/: demo.ipynb  pyproject.toml  requirements.txt  requirements_slim.txt
l2/demos/2-clip/: pyproject.toml  requirements_slim.txt
l2/demos/3-dinov2/: demo.ipynb  pyproject.toml  requirements.txt
l2/demos/4-detection-and-segmentation/: demo.ipynb  requirements_slim.txt
l2/demos/5-clip-and-florence/: pyproject.toml  requirements.txt  requirements_slim.txt
l2/exercises/1-vision-processing/: pyproject.toml  requirements.txt  requirements_slim.txt
l2/exercises/1-vision-processing/starter/: exercise.ipynb
l2/exercises/2-clip/: pyproject.toml  requirements.txt
l2/exercises/2-clip/starter/: exercise.ipynb
l2/exercises/3-image-moderation/: pyproject.toml  requirements.txt  requirements_slim.txt
l2/exercises/3-image-moderation/solution/: exercise.ipynb
l2/exercises/3-image-moderation/starter/: exercise.ipynb
l2/exercises/4-grand-finale/: pyproject.toml  requirements.txt  requirements_slim.txt
l2/exercises/4-grand-finale/starter/: exercise.ipynb
l3/demos/1-librosa/: demo.ipynb  pyproject.toml  requirements.txt  requirements_slim.txt
l3/demos/2-clap/: pyproject.toml  requirements.txt  requirements_slim.txt
l3/demos/3-whisper/: demo.ipynb  pyproject.toml  requirements.txt  requirements_slim.txt
l3/demos/4-gemini/: pyproject.toml  requirements.txt  requirements_slim.txt
l3/demos/5-sentiment-analysis/: demo.ipynb  env.example  pyproject.toml
l3/exercises/1-librosa/: pyproject.toml  requirements.txt  requirements_slim.txt
l3/exercises/1-librosa/solution/: exercise.ipynb
l3/exercises/1-librosa/starter/: exercise.ipynb
l3/exercises/2-clap/: pyproject.toml  requirements.txt  requirements_slim.txt
l3/exercises/2-clap/starter/: exercise.ipynb
l3/exercises/3-robot-commands/: pyproject.toml  requirements.txt
l3/exercises/3-robot-commands/solution/: exercise.ipynb
l3/exercises/3-robot-commands/starter/: exercise.ipynb
l3/exercises/4-moderation/: pyproject.toml  requirements.txt  requirements_slim.txt
l3/exercises/4-moderation/solution/: exercise.ipynb
l3/exercises/4-moderation/starter/: exercise.ipynb
l4/demos/1-yolo/: demo.ipynb  pyproject.toml  requirements.txt  requirements_slim.txt
l4/demos/2-video-understanding-with-fm/: demo.ipynb  env.example  pyproject.toml  requirements.txt  requirements_slim.txt
l4/demos/3-clip4clip/: demo.ipynb  pyproject.toml  requirements.txt  requirements_slim.txt
l4/demos/4-moderation-with-gemini/: demo.ipynb  pyproject.toml  requirements.txt  requirements_slim.txt
l4/demos/5-video-gen/: demo.ipynb  pyproject.toml  requirements.txt  requirements_slim.txt
l4/exercises/1-object-counting/: pyproject.toml
l4/exercises/1-object-counting/solution/: exercise.ipynb
l4/exercises/1-object-counting/starter/: exercise.ipynb
l4/exercises/2-salient-moments/: pyproject.toml
l4/exercises/2-salient-moments/solution/: exercise.ipynb
l4/exercises/2-salient-moments/starter/: exercise.ipynb
l4/exercises/3-video-tagging/: pyproject.toml  requirements.txt  requirements_slim.txt
l4/exercises/3-video-tagging/solution/: exercise.ipynb
l4/exercises/3-video-tagging/starter/: exercise.ipynb
l5/demos/1-gradio-unified-api/: demo.ipynb  pyproject.toml  rate_limiting.py  requirements.txt  requirements_slim.txt
l5/demos/2-logging-and-monitoring/: demo.ipynb  pyproject.toml  requirements.txt  requirements_slim.txt
l5/demos/3-evals/: demo.ipynb  matterhorn_facts.json  pyproject.toml  requirements.txt  requirements_slim.txt
l5/exercises/1-multimodal-evals/: pyproject.toml  requirements.txt  requirements_slim.txt
l5/exercises/1-multimodal-evals/solution/: exercise.ipynb
l5/exercises/1-multimodal-evals/starter/: exercise.ipynb
project/: README.md
project/starter/evals/image/: test_cases.py
project/starter/evals/text/: test_cases.py
project/starter/multimodal_moderation/: gradio_app.py
project/starter/multimodal_moderation/agents/: image_agent.py  text_agent.py
project/starter/multimodal_moderation/types/: moderation_result.py
