[project]
name = "l1-multimodal"
version = "0.1.0"
description = "Unified L1 multimodal course dependencies"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "dotenv>=0.9.9",
    "google-genai>=1.32.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.5",
    "nest-asyncio>=1.6.0",
    "num2words>=0.5.14",
    "pillow>=11.3.0",
    "pydantic-ai>=0.8.0",
    "qwen-vl-utils>=0.0.11",
    "requests>=2.32.5",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.4",
]

[tool.uv]
no-build-isolation-package = ["flash-attn", "setuptools"]