[project]
name = "1-showcase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "dotenv>=0.9.9",
    "flash-attn @ file:///workspace/.cache/wheels/flash_attn-2.8.3+cu124torch2.8-cp312-cp312-linux_x86_64.whl",
    "google-genai>=1.32.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.5",
    "num2words>=0.5.14",
    "pillow>=11.3.0",
    "qwen-vl-utils>=0.0.11",
    "requests>=2.32.5",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.4",
]
