[project]
name = "5-clip-and-florence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "evaluate>=0.4.5",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.3.0",
    "protobuf>=6.32.0",
    "pylance>=0.35.0",
    "scikit-learn>=1.7.1",
    "timm>=1.0.19",
    "torch==2.6",
    "torchvision>=0.20.1",
    "transformers>=4.56.1",
]
