[project]
name = "3-image-moderation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.3.0",
    "pydantic-ai-slim[google]>=1.0.2",
    "pylance>=0.35.0",
    "torch==2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.56.0",
]
