[project]
name = "2-clap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "librosa>=0.11.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pydub>=0.25.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.1",
    "soundfile>=0.13.1",
    "torch==2.8",
    "torchcodec==0.7.0",
    "transformers>=4.56.1",
]
