[project]
name = "3-whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "librosa>=0.11.0",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "torch>=2.8.0",
    "torchcodec>=0.7.0",
    "transformers>=4.56.1",
]
