[project]
name = "1-librosa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pydub>=0.25.1",
    "scipy>=1.16.1",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
]
