[project]
name = "1-object-counting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio[ffmpeg]>=2.37.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "rich==14.0.0",
    "supervision>=0.26.1",
    "yolo",
]

[tool.uv.sources]
yolo = { git = "https://github.com/WongKinYiu/YOLO.git", rev = "4a9a286d31c02d387330b5bcdc197e1bd1860cbd" }
