[project]
name = "1-multimodal-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "filetype>=1.2.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "pydantic-ai-slim[google,openai]>=1.0.15",
    "pydantic-evals>=1.0.15",
    "tenacity>=9.1.2",
]
