[project]
name = "1-showcase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "nest-asyncio>=1.6.0",
    "pillow>=11.3.0",
    "pydantic-ai>=0.8.0",
]

[tool.uv]
no-build-isolation-package = ["flash-attn", "setuptools"]
